# ubuntu-debuginfod-operator

./: .gitignore  README.md  charmcraft.yaml  pyproject.toml  tox.ini
.github/workflows/: integration_test.yaml  publish.yaml  test.yaml
doc/: README.md  contributing.md  ubuntu-debuginfod.drawio
etc/: apache-site-debuginfod.conf  debuginfod.service  default-debuginfod  nginx-site-debuginfod.conf
lib/charms/traefik_k8s/v2/: ingress.py
src/: charm.py  config.py  debuginfod.py  ubuntu_debuginfod.py  util.py
tests/integration/: conftest.py  test_charm.py
tests/unit/: test_charm.py
