[project]
name = "ubuntu-debuginfod-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    "launchpadlib",
    "charmlibs-apt",
    "charmlibs-pathops",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "jubilant",
    "ops[testing]",
    "pytest",
    "ruff",
]

# Testing tools configuration
[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 140
lint.select = ["E", "W", "F", "C", "N", "PL", "RUF", "I001"]
lint.exclude = ["PLR2004"]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
