[project]
name = "ubuntu-debuginfod-operator"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "ops",
    "launchpadlib",
    "charmlibs-apt",
    "charmlibs-pathops",
    "pydantic",
]

[dependency-groups]
dev = [
    "jubilant",
    "ops[testing]",
    "pytest",
    "pytest-subprocess",
    "requests",
    "ruff",
    "ty"
]

# charms are no real python module
#[build-system]
#requires = ["uv_build<0.10.0"]
#build-backend = "uv_build"

# Testing tools configuration
[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"
pythonpath = [
    "src"
]

# Linting tools configuration
[tool.ruff]
line-length = 120
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "N", "PL", "RUF", "I001"]
ignore = ["PLR2004", "PLR0912"]
mccabe.max-complexity = 20
pylint.max-args = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
